--- a/css/mediaAdpat.css
+++ b/css/mediaAdpat.css
@@ -1,13 +1,218 @@
 @media (min-width: 360px) and (max-width: 480px) {
+    .help__content {
+        display: grid;
+        grid-template-rows: 1fr;
+        gap: 20px
+    }
+    .opening__title {
+        margin-top: 85px
+    }
+    .opening {
+        height: 700px;
+    }
+    .opening__link {
+        margin: 0 auto;
+        transform: translateY(30px);
+    }
+    .opening__list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px
+    }
+    .opening__item {
+        margin-bottom: 0;
+    }
+    .opening__block {
+        max-width: none;
+    }
+    .description__text {
+        font-size: 17px;
+    }
+    .description__title {
+        font-size: 40px;
+    }
+    .modules__title {
+        font-size: 40px;
+    }
+    .modules__text {
+        font-size: 17px;
+    }
+    .footer__list:nth-of-type(1) li:nth-child(n + 2) a {
+        transform: translateY(20px);
+        font-size: 14px;
+       }
+    .footer__link, .footer__text {
+        font-size: 12px;
+        letter-spacing: normal;
+    }
+    .footer__list:nth-of-type(2) .footer__item:nth-of-type(2) {
+        order: 5;
+        margin-top: 25px;
+    }
+    .footer__list:nth-of-type(2) li:first-child {
+        transform: translateX(20px);
+    }
+
+    .footer__list:nth-of-type(2) {
+      display: flex;
+      flex-direction: column;
+      align-self: center;
+    }
+    .footer__list {
+        line-height: 1.2;
+    }
+    .footer__content {
+        gap: 10px;
+        margin: 0;
+    }
+    ._container {
+        max-width: 480px;
+    }
+    .footer__logo {
+        display: none;
+    }
+    .modules__block {
+        height: 500px;
+    }
     .modules {
         display: grid;
         grid-template-columns: 1fr;
+        gap: 10px;
+    }
+    /* .modules__block {
+        background-color: #fff;
+    } */
+    ._ibg>img {
+        height: 500px;
+        width: 130%;
+    }
+    .opening img {
+        height: 100%;
+        width: 200%;
     }
 
 }
 
 @media (min-width: 360px) and (max-width: 991px) {
+    .header__burger {
+        width: 55px;
+        height: 55px;
+        border-radius: 10px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 5px;
+        transition: all .5s ease;
+        margin: 1em;
+        }
+        .header__burger label {
+          transition: all .5s ease;
+        }
+        .nav__check span {
+          display: block;
+          height: 3px;
+          border-radius: 2px;
+          background: #fff;
+          margin: 10px;
+          transition: all .55s cubic-bezier(0.075, 0.82, 0.165, 1);
+          width: 40px;
+        }
+        
+        .menu__body {
+          position: absolute;
+          gap: 20px;
+          width: 100%;  
+           background: linear-gradient(to bottom, #000000, #000000);    
+          height: 0;
+          transition: all 0.5s ease-in-out;
+           top: 130px; 
+          left: 0;
+          overflow: hidden;
+        }
+        .menu__list {
+          margin-top: 20px;
+          display: flex;
+          flex-direction: column;
+          gap: 40px;
+        }
+        
+        .checked__burger {
+          height: 100vh;
+        }   /*burger*/
+        .upper__stick {
+            transform: translateY(13px) rotate(45deg);
+         }
+          .middle__stick {
+           opacity: 0;
+         }
+         .button__stick {
+         transform: translateY(-13px) rotate(-45deg);
+         } 
+         
+           .firstUl >  li:nth-child(n + 2) {
+            transform: translateX(23px);
+           }
+           .firstUl > li:last-child {
+            transform: translateX(5px);
+           }
+             .firstUl > li:nth-of-type(3), .firstUl > li:nth-of-type(5) {
+                pointer-events: none ;
+            }  
+           .firstUl > li:nth-of-type(4) {
+            transform: translate(23px, 130px);
+            transition: all .5s ease;
+            
+        }
+        .firstUl > li:nth-of-type(5) {
+            transform: translate(23px, 120px);
+            transition: all .5s ease;
+            
+        }
+        .firstUl > li:nth-of-type(6) {
+            transform: translate(-5px, 110px);
+            transition: all .5s ease;
+           
+        }
+        .menu__sub-item:not(:last-child) {
+            border: none
+        }
+        .menu__sub-item {
+            padding: 0;
+        }
+        .header {
+            position: fixed;
+        }
+         .menu__sub-list {
+            top: 35px;
+        }
+        .visible__sub {
+            opacity: 1;
+            visibility: visible;
+        }
+        .triangle {
+            position: relative;
+            display: inline-block;
+            width: 0;
+            height: 0;
+            border-top: 5px solid transparent;
+            border-bottom: 5px solid transparent;
+            border-left: 5px solid #fff; 
+            margin-left: 5px; 
+            transform: rotate(90deg) translateY(-100px); 
+        }
+
  .nav {
     display: none;
  }
+}
+@media (min-width: 240px) {
+    .footer__list:nth-of-type(2){
+        display: flex;
+        flex-direction: column;
+      }
+      .footer__list:nth-of-type(2) .footer__item:nth-of-type(2)  {    
+         order: 5;
+         margin-top: 25px;
+    }
 }
