--- a/css/mediaAdpat.css
+++ b/css/mediaAdpat.css
@@ -1,4 +1,7 @@
 @media (min-width: 360px) and (max-width: 480px) {
+    .menu__body {
+        top: 130px;
+    }
     .help__content {
         display: grid;
         grid-template-rows: 1fr;
@@ -79,9 +82,6 @@
         grid-template-columns: 1fr;
         gap: 10px;
     }
-    /* .modules__block {
-        background-color: #fff;
-    } */
     ._ibg>img {
         height: 500px;
         width: 130%;
@@ -90,7 +90,133 @@
         height: 100%;
         width: 200%;
     }
+    .header {
+        position: fixed;
+    }
+    .triangle {
+        left: 40%;
+        top: 323px
+    }
+    .triangle2 {
+        left: 39.5%;
+        top: 460px;
+    }
 
+}
+@media (min-width: 481px) and (max-width: 768px) {
+        .help__content {
+        display: grid;
+        grid-template-rows: 1fr;
+        gap: 20px
+    }
+    .footer__item:first-child {
+        margin-bottom: 15px;
+    }
+    .footer__list:nth-of-type(2) li:not(:first-child) {
+         transform: translateY(25px);
+    }
+    .footer__list:nth-of-type(1) li:nth-child(n + 2) a {
+        transform: translateY(20px);
+        font-size: 14px;
+       }
+    .footer__link, .footer__text {
+        font-size: 12px;
+        letter-spacing: normal;
+    }
+    .footer__list:nth-of-type(2) .footer__item:nth-of-type(2) {
+        order: 5;
+        margin-top: 25px;
+    }
+
+    .footer__list:nth-of-type(2) {
+      display: flex;
+      flex-direction: column;
+      align-self: center;
+    }
+    .footer__list {
+        line-height: 1.2;
+    }
+    .footer__content {
+        gap: 10px;
+        margin: 0;
+    }
+    .footer__logo {
+        display: none;
+    }
+    ._ibg>img {
+        width: 200%;
+    }
+    .menu__body {
+        top: 130px;
+    }
+    .triangle {
+        left: 44%;
+        top: 323px
+    }
+    .triangle2 {
+        left: 43.5%;
+        top: 460px
+    }
+    .opening__block {
+        max-width: none
+    } 
+    .opening {
+        height: 700px;
+    }
+    ._container {
+        max-width: 991px;
+    }
+    .opening__title {
+        margin-top: 100px;
+    }
+
+    .menu__btn:first-child {
+        margin-left: 20px;
+    }
+    .opening__block {
+        margin-left: 20px;
+    }
+    .modules__block img:nth-child(n) {
+        width: 100%
+    }
+}
+@media (min-width: 768px) and (max-width: 991px) { 
+    ._ibg>img {
+        width: 200%;
+    }
+    .triangle {
+        left: 45.2%;
+        top: 353px
+    }
+    .triangle2 {
+        left: 44.9%;
+        top: 490px
+    }
+    .opening__block {
+        max-width: none
+    } 
+    .opening {
+        height: 700px;
+    }
+    ._container {
+        max-width: 780px;
+    }
+    .opening__title {
+        margin-top: 120px;
+    }
+
+    .menu__btn:first-child {
+        margin-left: 20px;
+    }
+    .opening__block {
+        margin-left: 20px;
+    }
+    .menu__body {
+        top: 160px
+    }
+    .modules__block img:nth-child(n) {
+        width: 100%
+    }
 }
 
 @media (min-width: 360px) and (max-width: 991px) {
@@ -126,7 +252,6 @@
            background: linear-gradient(to bottom, #000000, #000000);    
           height: 0;
           transition: all 0.5s ease-in-out;
-           top: 130px; 
           left: 0;
           overflow: hidden;
         }
@@ -214,8 +339,6 @@
         }
         .triangle {
             position: absolute;
-            top: 323px;
-            left: 40%;
             display: inline-block;
             width: 10px;
             height: 10px;
@@ -231,8 +354,6 @@
        
         .triangle2 {
             position: absolute;
-            top: 460px;
-            left: 40%;
             display: inline-block;
             width: 10px;
             height: 10px;
@@ -274,6 +395,31 @@
     display: none;
  }
 }
+@media (min-width: 991px) and (max-width: 1200px) {
+    .nav__list {
+        gap: 30px;
+        margin-right: 15px;
+        
+    }
+    .nav__item:not(:last-child) {
+        margin-right: 0;
+    }
+    .header.preview.fix._lp .header__content._container {
+        max-width: 970px;
+        margin: 0;
+        margin-left: 15px;
+      }
+      .menu__item:not(:last-child) {
+        margin-right: 0;
+      }
+      .menu__list {
+        gap: 35px
+      }
+      .menu__btn:first-child {
+        transform:translateX(25px)
+      }
+    }
+
 @media (min-width: 240px) {
     .footer__list:nth-of-type(2){
         display: flex;
