--- a/css/mediaAdpat.css
+++ b/css/mediaAdpat.css
@@ -80,7 +80,6 @@
     .modules {
         display: grid;
         grid-template-columns: 1fr;
-        gap: 10px;
     }
     ._ibg>img {
         height: 500px;
@@ -394,6 +393,20 @@
  .nav {
     display: none;
  }
+ .opening::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    z-index: 2;
+}
+.opening__content {
+    position: relative;
+    z-index: 3; 
+}
 }
 @media (min-width: 991px) and (max-width: 1200px) {
     .nav__list {
